@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Check renderer before using it when calculating label size (#3822)
+
 - allow palette file path to be relative to mapfile (#2115)
 
 - use supplied offset for brushed lines (#3825, #3792)
